welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: value ! is not a member of Boolean
 while (!croisement!)
                   ^